tests/ui/typeck/issue-84831.stderr
error: expected one of `,` or `>`, found keyword `as`
  --> $DIR/issue-84831.rs:5:13
   |
LL |     std::<_ as _>;
   |             ^^ expected one of `,` or `>`
   |
help: expressions must be enclosed in braces to be used as const generic arguments
   |
LL |     std::<{ _ as _ }>;
   |           +        +

error[E0423]: cannot find value `std` in this scope
  --> $DIR/issue-84831.rs:2:5
   |
LL |     std::<0>;
   |     ^^^ not found in this scope
   |
   = note: a crate named `std` exists in another namespace

error[E0423]: cannot find value `std` in this scope
  --> $DIR/issue-84831.rs:5:5
   |
LL |     std::<_ as _>;
   |     ^^^ not found in this scope
   |
   = note: a crate named `std` exists in another namespace

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0423`.
